k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipelines-hello-world-api
  name: pipelines-hello-world-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-hello-world-api
  template:
    metadata:
      labels:
        app: pipelines-hello-world-api
    spec:
      containers:
        - image: quay.io/openshift-pipeline/hello-world-api:latest
          imagePullPolicy: Always
          name: pipelines-hello-world-api
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
