k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pipelines-hello-world-api
  name: pipelines-hello-world-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: pipelines-hello-world-api
