k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipelines-hello-world-api
  name: pipelines-hello-world-api
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=0
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: pipelines-hello-world-api
    weight: 100
